# Microwest-whisper

./: .gitignore  README.md  gui.py  index.html  launch-gui.ps1  launch-gui.sh  license_client.py  package-lock.json  package.json  pyinstaller-gui.spec  pyproject.toml  requirements.txt  setup-mac.sh  setup.ps1  transcribe-latest.ps1  transcribe-latest.sh  transcribe.ps1  transcribe.py  transcribe.sh
.github/workflows/: build-release.yml
docs/: DIARIZATION_V2.md  UPDATER.md  V2_PLAN.md  WHISPER_CPP_BACKEND.md
engine/python/: pyproject.toml  requirements-mac.txt  requirements.txt  transcribe.py  transcript_paths.py
engine/whispercpp/: README.md
scripts/: fetch-whispercpp-binaries.py  generate-updater-manifest.mjs  normalize-release-assets.mjs  prepare-whispercpp-resources.mjs  tauri-release-build.mjs
src/: App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: license.rs  main.rs  model_assets.rs  paths.rs  transcription.rs
src-tauri/windows/: hooks.nsh
src/components/: ui.tsx
src/hooks/: useDebouncedValue.ts  useLicense.ts  useModels.ts  useOutputs.ts  useTranscription.ts
src/lib/: format.test.ts  format.ts
src/screens/: AboutScreen.tsx  AudioScreen.tsx  LicenseScreen.tsx  ProgressScreen.tsx  ResultsScreen.tsx  SettingsScreen.tsx
tests/: __init__.py  test_transcript_helpers.py
