[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microwest-whisper"
version = "0.1.1"
description = "Local French transcription with WhisperX alignment and speaker diarization."
readme = "../../README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "whisperx==3.8.6",
    "python-dotenv==1.1.1",
    "tqdm==4.67.1",
    "python-docx==1.2.0",
    "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
mac = ["mlx-whisper==0.4.3"]

[project.scripts]
microwest-whisper = "transcribe:main"

[tool.setuptools]
py-modules = ["transcribe", "license_client", "transcript_paths"]
